--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,6 +1,9 @@
 <h1>New game!</h1>
+<%=@test.to_s %>
+<%=@letters.join(" ")%>
 
-<form action="/new">
+<form action="/score" method="post">
   <input type="text" name="word" placeholder="Your guess">
   <input type="submit" value="Guess!">
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 </form>
