--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -3,6 +3,8 @@
 <%=@letters.join(" ")%>
 
 <form action="/score" method="post">
+  <br>
+  <p>What is the longest word you can find?</p>
   <input type="text" name="word" placeholder="Your guess">
   <input type="submit" value="Guess!">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
